# notes_test_task

./: README.md  note_generation.sh  pyproject.toml
note/: config.json  config.py  note.py  note_app.py
test_task_1/: task.ipynb  y_posts.csv
