[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "note"
version = "0.0.0"
description = "LLM-based note taking app"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name="Alex Khapilin", email="khapilins@gmail.com" }
]
dependencies = [
  "litellm==1.37.20",
  "sentence-transformers==2.7.0",
  "faiss-cpu==1.8.0",
  "click==8.1.7",
]

[project.scripts]
note = "note.note_app:cli"

[tool.setuptools.package-data]
note = ["config.json"]

